--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +46,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.2",
+    "typescript-eslint": "^7.15.0"
   }
 }
