--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
