--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,9 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
@@ -22,7 +24,8 @@
     "socket.io-client": "^4.7.5",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
