--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
